Рефакторинг загрузки связей, удаление не нужных транзакций. Зачатки для задачи RD-34.